--- a/ASCII-Art/requirements.txt
+++ b/ASCII-Art/requirements.txt
@@ -1,5 +1,20 @@
-pillow==1.1.6
+pillow~=9.4.0
 moviepy
-numpy
+numpy~=1.20.3
 matplotlib
 opencv
+
+pathlib~=1.0.1
+defusedxml~=0.7.1
+cffi~=1.15.1
+zlib~=1.2.13
+pip~=23.0.1
+wheel~=0.38.4
+brotli~=1.0.9
+openssl~=1.1.1t
+cryptography~=39.0.1
+tornado~=6.2
+setuptools~=66.0.0
+opencv-python~=4.7.0.72
+xtermcolor
+colorama
